added relative path to spec
