# lib/apiservers/portlayer/swagger.json
@@ -312,14 +312,21 @@
 				],
 				"parameters": [
 					{
-						"name":"objectID",
+						"name":"deviceID",
 						"in":"query",
 						"required": true,
 						"type" : "string",
 						"x-nullable": false
 					},
 					{
-						"name":"targetPath",
+						"name":"absTargetPath",
+						"in":"query",
+						"required": true,
+						"type": "string",
+						"x-nullable": false
+					},
+					{
+						"name":"relativeTargetPath",
 						"in":"query",
 						"required": true,
 						"type": "string",
